--- a/src/bower.json
+++ b/src/bower.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "jquery": "~1.11.1",
     "backbone": "~1.1.2",
-    "underscore": "~1.6.0",
-    "handlebars": "~1.3.0",
-    "requirejs": "~2.1.14"
+    "underscore": "~1.7.0",
+    "handlebars": "~2.0.0",
+    "requirejs": "~2.1.14",
+    "marionette": "~2.1.0",
+    "backbone-validation": "~0.9.1"
   },
   "devDependencies": {
-    "qunit": "~1.14.0"
+    "qunit": "~1.15.0",
+    "sinon": "~1.10.3"
   }
 }
